--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.3.2",
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.87.4",
+    "axios": "^1.12.2",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
