--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.12.2",
+    "dayjs": "^1.11.18",
+    "jalaliday": "^3.1.1",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
